# hd2re

./: .gitignore  Cargo.toml  README.md  data_file.hexproj  dictionary.txt
src/: convert.rs  hash.rs  index.rs  lib.rs  main.rs  parse.rs  sniff.rs
src/sniff/: libmagic.rs  magika.rs  mod.rs
